force-app/main/default/objects/Product_Campaign__c/Product_Campaign__c.object-meta.xml
<CustomObject>
    <label>Product Campaign</label>
    <nameField>
        <label>Product Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>