force-app/main/default/objects/Product_Campaign__c/fields/IsOption__c.field-meta.xml
<CustomField>
    <fullName>IsOption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOption</label>
    <type>Checkbox</type>
</CustomField>