force-app/main/default/objects/Product_Campaign__c/fields/Primary_Flag__c.field-meta.xml
<CustomField>
    <fullName>Primary_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Flag</label>
    <type>Checkbox</type>
</CustomField>