force-app/main/default/objects/Product_Campaign__c/fields/Repair_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Repair_Pattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repair Pattern</label>
    <referenceTo>Repair_Pattern__c</referenceTo>
    <relationshipLabel>Product Campaigns</relationshipLabel>
    <relationshipName>Product_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>