force-app/main/default/objects/Product_Campaign__c/recordTypes/Recall.recordType-meta.xml
<RecordType>
    <fullName>Recall</fullName>
    <active>true</active>
    <label>Recall</label>
</RecordType>