force-app/main/default/objects/Product_Campaign__c/recordTypes/Voucher_Up_to_Discount.recordType-meta.xml
<RecordType>
    <fullName>Voucher_Up_to_Discount</fullName>
    <active>true</active>
    <label>Voucher Up to Discount</label>
</RecordType>